2005-12-03  Nathaniel Smith  <njs@pobox.com>

	* schema_migration.cc (logged_sqlite3_exec): New function.
	Use everywhere in this file.  Enables logging of migration
	commands for debugging purposes.

2005-12-03  Nathaniel Smith  <njs@pobox.com>

	* tests/t_mixed_case_pwd.at, testsuite.at: New test.

2005-12-02  Matthew Gregan  <kinetik@orcon.net.nz>

	* Makefile.am: Make Win32 build link against shfolder.lib to get
	SHGetFolderPathA on older Windows platforms (we had previously
	been relying on it to be available in shell32.lib) .
	* packet.cc (feed_packet_consumer::feed_packet_consumer,
	extract_packets): Move duplicated sets of regexs for key IDs,
	certs, etc. into constants.cc.
	* constants.{cc,hh}: Add regex strings extracted from packet.cc.  Also
	fix the key ID regex to accept a few characters we allowed in
	legal_key_name_bytes already.
	* tests/t_genkey.at: Test good and bad keys with all characters we
	allow in the user portion of a key id.

2005-12-01  Matthew Gregan  <kinetik@orcon.net.nz>

	* database.cc: Revert last change; db version and db migrate need
	to be able to open databases with old schema versions.  Calling
	sql() directly broke this.  Moved a db existence check scattered
	through the code into db_check_exists(), and added calls to this
	into ::version and ::migrate.
	* database.cc (database::version, database::migrate): Improve
	error handling where user has supplied the path to a non-existant
	database file.  Submitted by Neil Conway.
	* win32/fs.cc (rename_clobberingly_impl): Improve error handling
	around LoadLibrary call.
	* lua/{lvm.c,lgc.c,lapi.c}: Lua post-5.0.2 bugfixes from
	http://www.lua.org/bugs.html.  Submitted by Alex Queiroz.

2005-11-29  Matt Johnston  <matt@ucc.asn.au>

	* Makefile.am: add PCH_FLAGS only when compiling monotone and
	unit_tests objects, not for libs.
	* pch.hh: define __STDC_CONSTANT_MACROS as required for UINT32_C.

2005-11-28  Nathaniel Smith  <njs@pobox.com>
